@@ -22,6 +22,6 @@
 	<key>showFileHierarchyDrawer</key>
 	<true/>
 	<key>windowFrame</key>
-	<string>{{618, 48}, {991, 980}}</string>
+	<string>{{682, 64}, {923, 1107}}</string>
 </dict>
 </plist>
